tests/parsing/smtlib/v2.6/errors/102_get-value_bad_list_1.expected
File "tests/parsing/smtlib/v2.6/errors/102_get-value_bad_list_1.smt2", line 1, character 11-12:
1 | (get-value _)
               ^
Error while parsing a get-value command, read the reserved word '_',
      but expected an opening parenthesis to start a list of terms.
